# pterp-agent

./: README.md  main.py  pyproject.toml
conversations/: conversation_20251223_222359.md
src/: agent.py  chat.py  reddit.py  tools.py
