[project]
name = "planet-terp-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.14.0",
    "openai-agents>=0.6.4",
    "planet-terp-client>=0.1.6",
    "rich>=14.2.0",
    "ruff>=0.14.10",
]

[tool.uv.workspace]
members = [
    "test_init",
    "test_run/my_new_project",
]
